🚧 WIP Lint and improve `FJUtils`